--- a/lean.bib
+++ b/lean.bib
@@ -33,6 +33,7 @@ doi = {10.1007/978-3-319-21401-6_26},
 
 @inproceedings{mathlib,
 author = {{The mathlib Community}},
+editor={Blanchette, J. and Hrițcu, C.},
 title = {The Lean Mathematical Library},
 year = {2020},
 isbn = {9781450370974},
@@ -162,7 +163,6 @@ title="Using reflection to build efficient and certified decision procedures",
 booktitle="Theoretical Aspects of Computer Software",
 year="1997",
 publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
 pages="515--529",
 abstract="In this paper we explain how computational reflection can help build efficient certified decision procedure in reduction systems. We have developed a decision procedure on abelian rings in the Coq system but the approach we describe applies to all reduction systems that allow the definition of concrete types (or datatypes). We show that computational reflection is more efficient than an LCF-like approach to implement decision procedures in a reduction system. We discuss the concept of total reflection, which we have investigated in Coq using two facts: the extraction process available in Coq and the fact that the implementation language of the Coq system can be considered as a sublanguage of Coq. Total reflection is not yet implemented in Coq but we can test its performance as the extraction process is effective. Both reflection and total reflection are conservative extensions of the reduction system in which they are used. We also discuss performance and related approaches. In the paper,we assume basic knowledges of ML and proof-checkers.",
 isbn="978-3-540-69530-1",
